# type-depict

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  default.nix  expression-visualizer.cabal  hell.cabal  hie.yaml  index.html  release.nix  shell.nix  signature-visualizer.cabal  sim.cabal  svg.sh  type-depict.cabal  yie.haml
.github/workflows/: heroku.yml  nix.yml
app/: Main.hs
assets/: style.css
nix/: docker.nix  extrafiles.nix  hoogle-docker.nix  nixpkgs.nix
src/: Buffer.hs  Hoogle.hs  Parser.hs  Vis.hs  Visual.hs
test/: ParserSpec.hs  VisualSpec.hs  hoogleres.json
webserver/: Main.hs
webserver/assets/: style.css
