cabal-version:      2.4
name:               hell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sjur Millidahl
maintainer:         smillida@cisco.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.3.0,
        attoparsec,
        containers,
        multimap ^>=1.2.1,
        text
    exposed-modules:
        Parser
        Buffer

executable hell
    main-is:          Main.hs
    ghc-options:     -O2 -rtsopts -threaded -with-rtsopts=-K1K -rtsopts "-with-rtsopts=-N2 -T"
    build-depends:
        base ^>=4.14.3.0,
        hell,
        text
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite hell-test
    type:       exitcode-stdio-1.0
    main-is:    Spec.hs
    ghc-options:     -O2 -rtsopts -threaded -with-rtsopts=-K1K -rtsopts "-with-rtsopts=-N2 -T"
    hs-source-dirs: test
    build-depends:
        hell,
        base ^>=4.14.3.0,
        hspec,
        text
    other-modules:
        ParserSpec
    default-language: Haskell2010
