cabal-version:      2.4
name:               signature-visualizer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sjur Millidahl
maintainer:         sjur.millidahl@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.3.0,
        attoparsec,
        svg-builder,
        text
    exposed-modules:
        Visual
        Parser
    default-extensions:
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        RankNTypes
        RecordWildCards
        

executable signature-visualizer
    main-is:          Main.hs
    ghc-options:     -O2 -rtsopts -threaded -with-rtsopts=-K1K -rtsopts "-with-rtsopts=-N2 -T"
    build-depends:
        base ^>=4.14.3.0,
        signature-visualizer,
        svg-builder,
        text
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        RankNTypes
        RecordWildCards

executable signature-visualizer-webserver
    main-is:          Main.hs
    ghc-options:     -O2 -rtsopts -threaded -with-rtsopts=-K1K -rtsopts "-with-rtsopts=-N2 -T"
    build-depends:
        base ^>=4.14.3.0,
        neat-interpolation,
        signature-visualizer,
        svg-builder,
        text,
        scotty
    hs-source-dirs:   webserver
    default-language: Haskell2010
    default-extensions:
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        RankNTypes
        RecordWildCards
        QuasiQuotes
        TypeApplications

Test-Suite signature-visualizer-test
    type:       exitcode-stdio-1.0
    main-is:    Spec.hs
    ghc-options: -O2 -fwarn-incomplete-patterns -fwarn-redundant-constraints -fwarn-unused-imports -fwarn-unused-packages
    hs-source-dirs: test
    build-depends:
        signature-visualizer,
        base ^>=4.14.3.0,
        hspec
    other-modules:
        VisualSpec
    default-language: Haskell2010
